Card Maker Version History
--------------------------
0.99.4.0
- Added line spacing tag (ls) for FormattedText. This with store and override the existing line spacing.
- Significant changes to order and general translation  functionality with if/switch (Incept specific)
- Changed the issues window to indicate the layout, not the layout index
- Added option to log steps when performing an Incept translation (see settings)
- Overhaul of float/decimal parsing to allow for cross region support (well hopefully). Both ',' and '.' should be usable as a decimal separator. Thanks to kek444!
- Add override for the Google project wide defines (project level setting)
- Adjusted handling of newlines from Google Spreadsheets and CSVs (converted to \n)
- Added middle-mouse panning functionality for the canvas
- Added on canvas rotation mode (can be toggled with 'r')
- Added ability to resize layouts (keeping the relative location of the elements centered)
- Added Triangle shape
- Added ability to translate primitives (quotes/commas) in the definitions dialog
- Added ability to duplicate a layout to a new size and resize layouts (includes options for maintaining relative element positions)
- Added element edge guides (optional)
- Added ability to copy element settings (customizable so you can copy only the settings you need)
- Added bounds drawing for rotated elements (optional)
- Switched line drawing to fix the long standing issue with font spikes (fallout is fonts may be slightly rounded when drawn)
- Overhaul of the export code (primarily to fix an issue with layout file name overrides)
- Mono specific hack for the settings dialog
- Mono fixes related to PDF export
- Fix for Element dialog state on project load
- Various fixes (thanks to shdwcat on github for a null reference fix)

0.99.3.0
- Added JavaScript Translation functionality (this is optional/experimental)
- Added ![cardindex] and ![deckindex] as card values (usable in the element definition)