@@ -1,7 +1,7 @@
 ﻿////////////////////////////////////////////////////////////////////////////////
 // The MIT License (MIT)
 //
-// Copyright (c) 2015 Tim Stair
+// Copyright (c) 2017 Tim Stair
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
@@ -47,6 +47,7 @@ namespace CardMaker.Card.FormattedText.Markup
             {
                 return false;
             }
+            StringAlignment = zProcessData.CurrentStringAlignment;
             LineNumber = zProcessData.CurrentLine;
 
             m_sImageFile = arrayComponents[0];
