@@ -113,7 +113,11 @@
     <Compile Include="Card\FormattedText\Alignment\VerticalBottomAlignmentProcessor.cs" />
     <Compile Include="Card\FormattedText\Alignment\VerticalMiddleAlignmentProcessor.cs" />
     <Compile Include="Card\FormattedText\FormattedTextParser.cs" />
+    <Compile Include="Card\FormattedText\Markup\AlignCenterMarkup.cs" />
+    <Compile Include="Card\FormattedText\Markup\AlignLeftMarkup.cs" />
+    <Compile Include="Card\FormattedText\Markup\AlignRightMarkup.cs" />
     <Compile Include="Card\FormattedText\Markup\LineSpaceMarkup.cs" />
+    <Compile Include="Card\FormattedText\Markup\PixelMarkup.cs" />
     <Compile Include="Card\IDrawText.cs" />
     <Compile Include="Card\ElementString.cs" />
     <Compile Include="Card\Export\CardExportBase.cs" />
